--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -195,12 +195,12 @@
         "print(\"\\nTop 15 giftors by total contribution:\\n\", top_giftors)\n"
       ],
       "metadata": {
-        "id": "g3fhBo-vAjcH",
-        "outputId": "3569f1a4-c971-4d7c-85b3-8e62eee507cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "g3fhBo-vAjcH",
+        "outputId": "3569f1a4-c971-4d7c-85b3-8e62eee507cd"
       },
       "execution_count": 1,
       "outputs": [
@@ -453,6 +453,22 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The variable in the histogram is representative of logarithmic scalling, which is necessary in this situation due to the wide range of values we are dealing with. We can see that a majority of gifts are clustered around the 10^6 value.\n",
+        "\n",
+        "61% of the gifts were contracts, while the remaining 39% were monetary gifts. Real estate accounted for 0% or a negligible amount of the gifts recieved.\n",
+        "\n",
+        "The KDE plots are interesting, as the overall pattern of both the plots are similar. They show the same shape while the second plot breaks down the plot by gift type.\n",
+        "\n",
+        "Qatar is the top giftor based off monetary value of gifts, while England is the top giftor based off amount of gifts given\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7W1TYElWNa6z"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "IdL9z4wI_NXa"
       },
@@ -548,12 +564,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "ZJx4rS9fDrwT",
-        "outputId": "ef2b6726-5a33-4bff-e367-07421390f5f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "ZJx4rS9fDrwT",
+        "outputId": "ef2b6726-5a33-4bff-e367-07421390f5f0"
       },
       "execution_count": 5,
       "outputs": [
