--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -115,12 +115,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "9sdGDPeLA4y1",
-        "outputId": "80f50c63-7523-4630-8946-793ea5e690e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "9sdGDPeLA4y1",
+        "outputId": "80f50c63-7523-4630-8946-793ea5e690e2"
       },
       "execution_count": 9,
       "outputs": [
@@ -243,6 +243,47 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Analysis of GSS Data: Demographics and Job Satisfaction\n",
+        "Introduction\n",
+        "The General Social Survey (GSS) provides a fascinating look into American society, covering a wide range of topics from demographics to workplace experiences. For this analysis, I focused on five key variables:\n",
+        "\n",
+        "Age – The distribution of respondents' ages.\n",
+        "Sex – The gender breakdown of participants.\n",
+        "Race – Racial demographics in the sample.\n",
+        "Marital Status – Relationship status of individuals.\n",
+        "\n",
+        "Job Satisfaction – Self-reported levels of job satisfaction.\n",
+        "By exploring these variables, we can better understand patterns in job satisfaction and how it may relate to demographic factors.\n",
+        "\n",
+        "Key Findings\n",
+        "1. Age Distribution\n",
+        "The age distribution in the dataset shows a strong concentration of respondents in their 30s to 50s, which is expected given that the GSS often captures individuals in their prime working years. There is a noticeable decline in the number of respondents at older ages, which could reflect factors such as retirement or lower survey participation among elderly individuals. The distribution is slightly right-skewed, meaning there are fewer older participants compared to younger ones.\n",
+        "\n",
+        "2. Gender Distribution\n",
+        "The sample includes both men and women in fairly equal proportions, with a slight male majority. This balance is important for ensuring that survey results are representative of the broader population. While gender differences in survey participation can sometimes skew results, the near-equal distribution suggests that responses can be analyzed without significant bias toward one gender.\n",
+        "\n",
+        "3. Racial Demographics\n",
+        "As expected, White respondents make up the majority, followed by Black respondents and a smaller category labeled Other. While this distribution is consistent with national demographic trends, it also highlights a common limitation in survey research: racial minorities may be underrepresented. This could be due to lower participation rates or sampling methods that don’t fully capture the diversity of the U.S. population. Future studies could explore ways to ensure more balanced representation.\n",
+        "\n",
+        "4. Marital Status\n",
+        "Marriage remains the most common relationship status among respondents, with a significant portion also reporting that they have never been married. Divorce is fairly common, while widowed and separated individuals make up a smaller percentage of the dataset. This distribution aligns with broader societal trends, where marriage rates remain high but divorce and singlehood are also common. Given that marital status can influence both personal and professional satisfaction, further exploration into how it relates to job satisfaction could be insightful.\n",
+        "\n",
+        "5. Job Satisfaction\n",
+        "Overall, job satisfaction trends positively, with most respondents reporting that they are either \"Very Satisfied\" or \"Moderately Satisfied\" with their jobs. Dissatisfaction levels are relatively low, but they do exist, indicating that while many people find fulfillment in their work, there are still challenges that lead some to feel unhappy. Further analysis could explore whether job satisfaction varies by age, marital status, or race—factors that often influence career experiences.\n",
+        "\n",
+        "Conclusion\n",
+        "\n",
+        "This analysis provides a snapshot of demographics and job satisfaction among American workers. The findings suggest that most people are generally content with their jobs, with dissatisfaction affecting only a smaller group. The data also reinforces well-known demographic trends, such as the prevalence of marriage and the racial composition of survey participants.\n",
+        "\n",
+        "While these insights are useful on their own, they also open the door for deeper questions: How does job satisfaction change over time? Are certain groups more likely to experience workplace dissatisfaction? Exploring these questions could lead to a better understanding of workplace dynamics and how different factors shape career experiences."
+      ],
+      "metadata": {
+        "id": "9Cr56tIJycAC"
+      }
     }
   ],
   "metadata": {
