--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -32,23 +32,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dataset Description and Variable Selection\n",
+        "Dataset Description and Variable Selection:\n",
         "\n",
-        "For this analysis, I have selected a small set of variables from the General Social Survey (GSS) to explore correlations between demographic factors and job satisfaction. The GSS provides a rich dataset that allows for in-depth analysis of societal trends over time. My selected variables include:\n",
+        "For this analysis, I have selected a small set of variables from the General Social Survey (GSS) to explore correlations between demographic factors and job satisfaction. The GSS is a well-established, nationally representative dataset that has been widely used in social science research to track societal trends, attitudes, and behaviors over time. Its extensive data collection allows for robust analysis of various social and economic factors, making it an ideal resource for examining workplace satisfaction and its potential demographic influences.\n",
         "\n",
-        "AGE - Respondent's age\n",
+        "These are the specific variables I have chosen for my study:\n",
         "\n",
-        "SEX - Respondent's gender\n",
+        "age – Respondent’s age, which may indicate generational differences in job satisfaction or how workplace contentment evolves over the course of a career.\n",
         "\n",
-        "RACE - Respondent's race\n",
+        "sex – Respondent’s gender, allowing for an exploration of potential disparities in job satisfaction between men and women.\n",
         "\n",
-        "MARITAL - Marital status\n",
+        "race – Respondent’s racial identity, which may reveal differences in workplace experiences across racial groups.\n",
         "\n",
-        "JOBSAT - Job satisfaction level\n",
+        "marital – Marital status, which could provide insight into how family life and relationship status relate to job satisfaction.\n",
         "\n",
-        "These variables were chosen to examine potential relationships between demographic factors (age, sex, race, marital status) and job satisfaction. By investigating job satisfaction (JOBSAT), we can assess how individual characteristics might influence workplace contentment. The GSS data provide a nationally representative sample, making it an excellent resource for exploring these social dynamics.\n",
+        "jobsat – Respondent’s reported level of job satisfaction, serving as the key dependent variable in this analysis.\n",
         "\n",
-        "The next steps will involve loading and cleaning the data before conducting exploratory data analysis (EDA).\n",
+        "These variables were selected to investigate potential relationships between demographic characteristics and job satisfaction. By analyzing JOBSAT in relation to age, gender, race, and marital status, I aim to assess whether and how these factors contribute to variations in workplace contentment. Prior research has shown that demographic factors can influence job satisfaction through mechanisms such as workplace discrimination, work-life balance, career progression opportunities, and social support systems. Exploring these relationships within the GSS dataset may help identify broader patterns and contribute to a deeper understanding of workforce dynamics.\n",
+        "\n",
+        "The next steps in this study involve data preparation, starting with loading and cleaning the dataset to handle any missing or inconsistent values. Following this, I will conduct exploratory data analysis (EDA) to examine the distributions of each variable, identify potential outliers, and detect preliminary trends or associations. Visualizing and summarizing the data at this stage will provide a clearer foundation for subsequent statistical analysis, allowing for more informed hypotheses and interpretations. Depending on the initial findings, further statistical techniques such as correlation analysis, regression modeling, or subgroup comparisons can be applied to better understand the factors influencing job satisfaction.\n",
+        "\n",
+        "By leveraging the rich and representative nature of the GSS dataset, this analysis seeks to contribute to discussions on workplace equity, employee well-being, and broader social trends affecting job satisfaction.\n",
         "\n"
       ],
       "metadata": {
@@ -122,7 +126,7 @@
         "id": "9sdGDPeLA4y1",
         "outputId": "80f50c63-7523-4630-8946-793ea5e690e2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,38 +252,38 @@
       "cell_type": "markdown",
       "source": [
         "Analysis of GSS Data: Demographics and Job Satisfaction\n",
-        "Introduction\n",
+        "\n",
+        "Introduction:\n",
         "The General Social Survey (GSS) provides a fascinating look into American society, covering a wide range of topics from demographics to workplace experiences. For this analysis, I focused on five key variables:\n",
         "\n",
         "Age – The distribution of respondents' ages.\n",
+        "\n",
         "Sex – The gender breakdown of participants.\n",
+        "\n",
         "Race – Racial demographics in the sample.\n",
+        "\n",
         "Marital Status – Relationship status of individuals.\n",
         "\n",
         "Job Satisfaction – Self-reported levels of job satisfaction.\n",
         "By exploring these variables, we can better understand patterns in job satisfaction and how it may relate to demographic factors.\n",
         "\n",
         "Key Findings\n",
-        "1. Age Distribution\n",
-        "The age distribution in the dataset shows a strong concentration of respondents in their 30s to 50s, which is expected given that the GSS often captures individuals in their prime working years. There is a noticeable decline in the number of respondents at older ages, which could reflect factors such as retirement or lower survey participation among elderly individuals. The distribution is slightly right-skewed, meaning there are fewer older participants compared to younger ones.\n",
+        "1. Age Distribution: The age distribution in the dataset shows a strong concentration of respondents in their 30s to 50s, which is expected given that the GSS often captures individuals in their prime working years. There is a noticeable decline in the number of respondents at older ages, which could reflect factors such as retirement or lower survey participation among elderly individuals. The distribution is slightly right-skewed, meaning there are fewer older participants compared to younger ones.\n",
         "\n",
-        "2. Gender Distribution\n",
-        "The sample includes both men and women in fairly equal proportions, with a slight male majority. This balance is important for ensuring that survey results are representative of the broader population. While gender differences in survey participation can sometimes skew results, the near-equal distribution suggests that responses can be analyzed without significant bias toward one gender.\n",
+        "2. Gender Distribution: The sample includes both men and women in fairly equal proportions, indicating a fairly even gender distribution with a slight male majority. This balance is important for ensuring that survey results are representative of the broader population. While gender differences in survey participation can sometimes skew results, the near-equal distribution suggests that responses can be analyzed without significant bias toward one gender.\n",
         "\n",
-        "3. Racial Demographics\n",
-        "As expected, White respondents make up the majority, followed by Black respondents and a smaller category labeled Other. While this distribution is consistent with national demographic trends, it also highlights a common limitation in survey research: racial minorities may be underrepresented. This could be due to lower participation rates or sampling methods that don’t fully capture the diversity of the U.S. population. Future studies could explore ways to ensure more balanced representation.\n",
+        "3. Racial Demographics: As expected, White respondents make up the majority, followed by Black respondents and a smaller category labeled Other. While this distribution is consistent with national demographic trends, it also highlights a common limitation in survey research: racial minorities may be underrepresented. This could be due to lower participation rates or sampling methods that don’t fully capture the diversity of the U.S. population. Future studies could explore ways to ensure more balanced representation.\n",
         "\n",
-        "4. Marital Status\n",
-        "Marriage remains the most common relationship status among respondents, with a significant portion also reporting that they have never been married. Divorce is fairly common, while widowed and separated individuals make up a smaller percentage of the dataset. This distribution aligns with broader societal trends, where marriage rates remain high but divorce and singlehood are also common. Given that marital status can influence both personal and professional satisfaction, further exploration into how it relates to job satisfaction could be insightful.\n",
+        "4. Marital Status: Marriage remains the most common relationship status among respondents, with a significant portion also reporting that they have never been married. Divorce is fairly common, while widowed and separated individuals make up a smaller percentage of the dataset. This distribution aligns with broader societal trends, where marriage rates remain high but divorce and singlehood are also common. Given that marital status can influence both personal and professional satisfaction, further exploration into how it relates to job satisfaction could be insightful.\n",
         "\n",
-        "5. Job Satisfaction\n",
-        "Overall, job satisfaction trends positively, with most respondents reporting that they are either \"Very Satisfied\" or \"Moderately Satisfied\" with their jobs. Dissatisfaction levels are relatively low, but they do exist, indicating that while many people find fulfillment in their work, there are still challenges that lead some to feel unhappy. Further analysis could explore whether job satisfaction varies by age, marital status, or race—factors that often influence career experiences.\n",
+        "5. Job Satisfaction: Overall, job satisfaction trends positively, with most respondents reporting that they are either \"Very Satisfied\" or \"Moderately Satisfied\" with their jobs. Dissatisfaction levels are relatively low, but they do exist, indicating that while many people find fulfillment in their work, there are still challenges that lead some to feel unhappy. Further analysis could explore whether job satisfaction varies by age, marital status, or race—factors that often influence career experiences.\n",
         "\n",
-        "Conclusion\n",
-        "\n",
+        "Conclusion:\n",
         "This analysis provides a snapshot of demographics and job satisfaction among American workers. The findings suggest that most people are generally content with their jobs, with dissatisfaction affecting only a smaller group. The data also reinforces well-known demographic trends, such as the prevalence of marriage and the racial composition of survey participants.\n",
         "\n",
-        "While these insights are useful on their own, they also open the door for deeper questions: How does job satisfaction change over time? Are certain groups more likely to experience workplace dissatisfaction? Exploring these questions could lead to a better understanding of workplace dynamics and how different factors shape career experiences."
+        "While these insights are useful on their own, they also open the door for deeper questions: How does job satisfaction change over time? Are certain groups more likely to experience workplace dissatisfaction? Exploring these questions could lead to a better understanding of workplace dynamics and how different factors shape career experiences.\n",
+        "\n",
+        "*I used StackOverflow, OpenAI, and class notes for the completion of this assignment"
       ],
       "metadata": {
         "id": "9Cr56tIJycAC"
